<resources>
    <!-- General Strings-->
    <string name="app_name">AndroidTest</string>

    <!-- Main Screen Strings -->
    <string name="animation">Animation</string>
    <string name="activity_main_title">Coding Tasks</string>
    <string name="company_photo_content_description">AppPartner Company Photo</string>
    <string name="chat_button">CHAT</string>
    <string name="chat">Chat</string>
    <string name="login_button">LOG IN</string>
    <string name="animation_button">ANIMATION</string>
    <string name="fade_button">FADE</string>
    <string name="login">Log in</string>
    <string name="login_alert_title">Login Status</string>
    <string name="code">Code</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="ms">ms</string>
    <string name="ok">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

</resources>
