<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                tools:context="com.apppartner.androidtest.login.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:id="@+id/username"
        android:layout_marginTop="48dp"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/username"
        android:id="@+id/password"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/password"
        android:id="@+id/login"
        android:background="@color/button_orange"
        android:onClick="onLogin"
        android:text="@string/login_button"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size" />
</RelativeLayout>
